--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,6 +1,8 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "devise_bootstrap_views";
+@import 'jquery-ui/core.css';
+@import 'jquery-ui/theme.css';
 
 body {
   //min-height: 2000px;
