--- a/app/views/chats/_bot.html.erb
+++ b/app/views/chats/_bot.html.erb
@@ -16,15 +16,14 @@
         <% else %>
           <%= text_area_tag :body, message.body, class: 'form-control', readonly: true %>
         <% end %>
-        <br />
-        <%= bootstrap_form_for [bot, message.training, message] do |f| %>
-          <%= f.collection_select :answer_id, bot.answers, :id, :body %>
-          <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
-          <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
-        <% end %>
+        <!-- <br /> -->
+        <%#= bootstrap_form_for [bot, message.training, message] do |f| %>
+          <%#= f.collection_select :answer_id, bot.answers, :id, :body %>
+          <%#= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
+          <%#= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
+        <%# end %>
         <br />
         <%= bootstrap_form_for Answer.new, url: replace_bot_training_answer_path(bot, message.training, message) do |f| %>
-          <%#= f.text_area :body, hide_label: true %>
           <div class="form-group">
             <%= f.autocomplete_field :body, autocomplete_answer_body_bot_trainings_path, class: 'form-control' %>
           </div>
