rebase後の手動調整

--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -17,14 +17,10 @@
           <%= text_area_tag :body, message.body, class: 'form-control', readonly: true %>
         <% end %>
         <br />
-        <%= bootstrap_form_for [bot, message.training, message] do |f| %>
-          <%= f.collection_select :answer_id, bot.answers, :id, :body %>
-          <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
-          <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
-        <% end %>
-        <br />
         <%= bootstrap_form_for Answer.new, url: replace_bot_training_answer_path(bot, message.training, message) do |f| %>
-          <%= f.text_area :body, hide_label: true %>
+          <div class="form-group">
+            <%= f.autocomplete_field :body, autocomplete_answer_body_bot_trainings_path, class: 'form-control' %>
+          </div>
           <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
           <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
         <% end %>
@@ -32,30 +28,12 @@
         <%= auto_link(simple_format(message.body), html: { target: '_blank' }) %>
       <% end %>
     </div>
-
     <div class="col-sm-12">
       <p>
         ここに選択肢が入る
       </p>
       <%= link_to new_bot_training_answer_decision_branch_path(@bot, @training, message.answer), remote: true do %><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 選択肢を追加する<% end %>
     </div>
-
-
-    <!--
-    <% if message.answer.try(:decision_branches).try(:present?) %>
-      <div class="col-sm-12">
-        <br />
-        <% message.answer.decision_branches.each do |decision_branch| %>
-        <div class="col-sm-12">
-          <%= bootstrap_form_for decision_branch, url: bot_chats_choices_path(message.parent.bot, decision_branch), method: :post,remote: true do |f| %>
-            <%= submit_tag decision_branch.body, class: 'btn btn-default col-sm-6' %>
-            <%= f.hidden_field :id %>
-          <% end %>
-        </div>
-        <% end %>
-      </div>
-    <% end %>
-  -->
   </div>
   <div class="col-sm-2"></div>
 </div>
