既にanswerに紐付いている選択肢を表示する

--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -28,12 +28,20 @@
         <%= auto_link(simple_format(message.body), html: { target: '_blank' }) %>
       <% end %>
     </div>
-    <div class="col-sm-12">
-      <p>
-        ここに選択肢が入る
-      </p>
-      <%= link_to new_bot_training_answer_decision_branch_path(@bot, @training, message.answer), remote: true do %><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 選択肢を追加する<% end %>
-    </div>
+    <% if message.answer.present? %>
+      <div class="col-sm-12">
+        <% message.answer.decision_branches.each do |decision_branch| %>
+          <div class="col-sm-12">
+            <%= link_to decision_branch.body, '#', class: 'btn btn-default' %>
+            <%#= bootstrap_form_for decision_branch, url: bot_chats_choices_path(message.parent.bot, decision_branch), method: :post,remote: true do |f| %>
+              <%#= submit_tag decision_branch.body, class: 'btn btn-default col-sm-6' %>
+              <%#= f.hidden_field :id %>
+            <%# end %>
+          </div>
+        <% end %>
+        <%= link_to new_bot_training_answer_decision_branch_path(@bot, @training, message.answer), remote: true do %><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 選択肢を追加する<% end %>
+      </div>
+    <% end %>
   </div>
   <div class="col-sm-2"></div>
 </div>
