--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -17,7 +17,7 @@
           <%= text_area_tag :body, message.body, class: 'form-control', readonly: true %>
         <% end %>
         <br />
-        <%= bootstrap_form_for Answer.new, url: replace_bot_training_answer_path(bot, message.training, message) do |f| %>
+        <%= bootstrap_form_for Answer.new, url: replace_bot_training_answer_path(bot, message.training, message), remote: true do |f| %>
           <div class="form-group">
             <%= f.autocomplete_field :body, autocomplete_answer_body_bot_trainings_path, class: 'form-control' %>
           </div>
@@ -32,10 +32,10 @@
       <div class="col-sm-12">
         <%= bootstrap_form_for [bot, message.training, message.answer], remote: true do |f| %>
           <%= f.fields_for :decision_branches do |fd| %>
-            <%= render 'decision_branch_fields', f: fd %>
+            <%= render 'trainings/decision_branch_fields', f: fd %>
           <% end %>
           <div class="links">
-            <%= link_to_add_association f, :decision_branches do %><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 選択肢を追加する<% end %>
+            <%#= link_to_add_association f, :decision_branches do %><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 選択肢を追加する<%# end %>
           </div>
           <%= f.submit '更新する', class: 'btn btn-primary' %>
         <% end %>
