--- a/app/views/trainings/_decision_branch_fields.html.slim
+++ b/app/views/trainings/_decision_branch_fields.html.slim
@@ -1,3 +1,6 @@
 .nested-fields
-  = f.text_field :body, hide_label: true
-  = link_to_remove_association "remove task", f
+  .input-group
+    = f.text_field :body, hide_label: true
+    .input-group-btn
+      = link_to_remove_association f, class: 'btn btn-default' do 
+        span.glyphicon.glyphicon-remove aria-hidden="true"
