選択肢のひも付けのUIの実装途中

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -62,6 +62,10 @@ body {
   z-index: 100;
 }
 
+// .decision-branch-field {
+//   display:none;
+// }
+
 .balloon {
   border-radius: 10px;
   -webkit-border-radius: 10px;
