選択肢の編集のUIを整える(途中)

--- a/app/views/trainings/_decision_branch_fields.html.slim
+++ b/app/views/trainings/_decision_branch_fields.html.slim
@@ -1,5 +1,6 @@
-.nested-fields
-  .decision-branch-value= f.object.body
+li.nested-fields.list-group-item
+  .decision-branch-value
+    = f.object.body
   .decision-branch-field
     .input-group
       = f.text_field :body, hide_label: true
