--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -32,13 +32,15 @@
       <div class="col-sm-12">
         <%= bootstrap_form_for [bot, message.training, message.answer], remote: true, html: { class: 'decision-branches-update-form' } do |f| %>
           <br />
-          <%= f.fields_for :decision_branches do |fd| %>
-            <%= render 'trainings/decision_branch_fields', f: fd %>
-          <% end %>
+          <ul class="list-group">
+            <%= f.fields_for :decision_branches do |fd| %>
+              <%= render 'trainings/decision_branch_fields', f: fd %>
+            <% end %>
+          </ul>
           <div class="links">
             <%= link_to_add_association f, :decision_branches, partial: 'trainings/decision_branch_fields' do %><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 選択肢を追加する<% end %>
           </div>
-          <%= f.submit '更新する', class: 'btn btn-primary' %>
+          <%#= f.submit '更新する', class: 'btn btn-primary' %>
         <% end %>
 
         <%# message.answer.decision_branches.each do |decision_branch| %>
