--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -36,10 +36,10 @@
             <%= f.fields_for :decision_branches do |fd| %>
               <%= render 'trainings/decision_branch_fields', f: fd %>
             <% end %>
+            <div class="links">
+              <%= link_to_add_association f, :decision_branches, partial: 'trainings/decision_branch_fields', class: 'add-fields-link' do %><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 選択肢を追加する<% end %>
+            </div>
           </ul>
-          <div class="links">
-            <%= link_to_add_association f, :decision_branches, partial: 'trainings/decision_branch_fields' do %><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 選択肢を追加する<% end %>
-          </div>
           <%#= f.submit '更新する', class: 'btn btn-primary' %>
         <% end %>
 
