--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -30,18 +30,22 @@
     </div>
     <% if message.answer.present? %>
       <div class="col-sm-12">
-        <%= bootstrap_form_for [bot, message.training, message.answer], remote: true, html: { class: 'decision-branches-update-form' } do |f| %>
+        <%#= bootstrap_form_for [bot, message.training, message.answer], remote: true, html: { class: 'decision-branches-update-form' } do |f| %>
           <br />
           <ul class="list-group">
-            <%= f.fields_for :decision_branches do |fd| %>
-              <%= render 'trainings/decision_branch_fields', f: fd %>
+            <% message.answer.decision_branches.each do |decision_branch| %>
+              <%#= decision_branch.body %>
+              <%= render 'decision_branch_fields', bot: message.parent.bot, training: message.training, answer: message.answer, decision_branch: decision_branch %>
             <% end %>
+            <%#= f.fields_for :decision_branches do |fd| %>
+              <%#= render 'trainings/decision_branch_fields', f: fd %>
+            <%# end %>
             <div class="links">
-              <%= link_to_add_association f, :decision_branches, partial: 'trainings/decision_branch_fields', class: 'add-fields-link' do %><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 選択肢を追加する<% end %>
+              <%#= link_to_add_association f, :decision_branches, partial: 'trainings/decision_branch_fields', class: 'add-fields-link' do %><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 選択肢を追加する<%# end %>
             </div>
           </ul>
           <%#= f.submit '更新する', class: 'btn btn-primary' %>
-        <% end %>
+        <%# end %>
 
         <%# message.answer.decision_branches.each do |decision_branch| %>
           <!-- <div class="col-sm-12"> -->
