選択肢の削除を実装

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -66,6 +66,15 @@ body {
 //   display:none;
 // }
 
+.list-group-item {
+  position: relative;
+  .btn {
+    position: absolute;
+    right: 3px;
+    top: 3px;
+  }
+}
+
 .balloon {
   border-radius: 10px;
   -webkit-border-radius: 10px;
