--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -28,36 +28,21 @@
         <%= auto_link(simple_format(message.body), html: { target: '_blank' }) %>
       <% end %>
     </div>
-    <% if message.answer.present? %>
+    <% if message.answer.present? && messages.last == message %>
       <div class="col-sm-12">
-        <%#= bootstrap_form_for [bot, message.training, message.answer], remote: true, html: { class: 'decision-branches-update-form' } do |f| %>
-          <br />
-          <ul class="list-group">
-            <% message.answer.decision_branches.each do |decision_branch| %>
-              <%#= decision_branch.body %>
-              <%= render 'decision_branch_fields', bot: message.parent.bot, training: message.training, answer: message.answer, decision_branch: decision_branch %>
-            <% end %>
-            <%#= f.fields_for :decision_branches do |fd| %>
-              <%#= render 'trainings/decision_branch_fields', f: fd %>
-            <%# end %>
-          </ul>
-          <div class="links">
-            <%#= link_to_add_association f, :decision_branches, partial: 'trainings/decision_branch_fields', class: 'add-fields-link' do %><!-- <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 選択肢を追加する --><%# end %>
-            <%= link_to new_bot_training_answer_decision_branch_path(message.parent.bot, message.training, message.answer), remote: true, class: 'add-fields-link' do %><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 選択肢を追加する<% end %>
-          </div>
-          <%#= f.submit '更新する', class: 'btn btn-primary' %>
-        <%# end %>
-
-        <%# message.answer.decision_branches.each do |decision_branch| %>
-          <!-- <div class="col-sm-12"> -->
-            <%#= link_to decision_branch.body, '#', class: 'btn btn-default' %>
-            <%#= bootstrap_form_for decision_branch, url: bot_chats_choices_path(message.parent.bot, decision_branch), method: :post,remote: true do |f| %>
-              <%#= submit_tag decision_branch.body, class: 'btn btn-default col-sm-6' %>
-              <%#= f.hidden_field :id %>
-            <%# end %>
-          <!-- </div> -->
-        <%# end %>
-        <%#= link_to new_bot_training_answer_decision_branch_path(@bot, @training, message.answer), remote: true do %><!-- <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 選択肢を追加する --><%# end %>
+        <br />
+        <ul class="list-group">
+          <% message.answer.decision_branches.each do |decision_branch| %>
+            <%= render 'trainings/decision_branch_fields', bot: message.parent.bot, training: message.training, answer: message.answer, decision_branch: decision_branch %>
+          <% end %>
+          <%#= f.fields_for :decision_branches do |fd| %>
+            <%#= render 'trainings/decision_branch_fields', f: fd %>
+          <%# end %>
+        </ul>
+        <div class="links">
+          <%#= link_to_add_association f, :decision_branches, partial: 'trainings/decision_branch_fields', class: 'add-fields-link' do %><!-- <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 選択肢を追加する --><%# end %>
+          <%= link_to new_bot_training_answer_decision_branch_path(message.parent.bot, message.training, message.answer), remote: true, class: 'add-fields-link' do %><span class="glyphicon glyphicon-plus" aria-hidden="true"></span> 選択肢を追加する<% end %>
+        </div>
       </div>
     <% end %>
   </div>
