一番最後のanswer部分のみ編集可能にする処理の実装途中

--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -47,4 +47,5 @@
     <% end %>
   </div>
   <div class="col-sm-2"></div>
+  <%= link_to '編集不可にしてみる', 'javascript:void(0)', class: 'btn btn-default btn-disabled-answers' %>
 </div>
