--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -47,5 +47,5 @@
     <% end %>
   </div>
   <div class="col-sm-2"></div>
-  <%= link_to '編集不可にしてみる', 'javascript:void(0)', class: 'btn btn-default btn-disabled-answers' %>
+  <%#= link_to '編集不可にしてみる', 'javascript:void(0)', class: 'btn btn-default btn-disabled-answers' %>
 </div>
