--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -3,6 +3,7 @@
 @import "devise_bootstrap_views";
 @import 'jquery-ui/core.css';
 @import 'jquery-ui/theme.css';
+@import 'jquery-ui/autocomplete.css';
 
 body {
   //min-height: 2000px;
