--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -1,9 +1,10 @@
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "devise_bootstrap_views";
-@import 'jquery-ui/core.css';
-@import 'jquery-ui/theme.css';
-@import 'jquery-ui/autocomplete.css';
+@import 'jquery-ui/all.css';
+// @import 'jquery-ui/core.css';
+// @import 'jquery-ui/theme.css';
+// @import 'jquery-ui/autocomplete.css';
 
 body {
   //min-height: 2000px;
