Viewを編集不可に切り替える処理を実装

--- a/app/views/trainings/answers/update.js.erb
+++ b/app/views/trainings/answers/update.js.erb
@@ -9,6 +9,7 @@ $('.decision-branches-update-form').last().attr('action', "<%= bot_training_answ
 <% end %>
 
 <% if @bot_messages.present? %>
+  disable_answer_bodies();
   <% @bot_messages.each do |bot_message| %>
   <%# 会話している風にするため意図的にbotの発言を遅らせる %>
     $('.chat-area').delay(1300).queue(function() {
