--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -83,13 +83,13 @@ body {
   border-radius: 10px;
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
+  padding: 12px;
 }
 
 /* balloon-1 left */
 .balloon-1-left {
 	position: relative;
 	display: inline-block;
-	padding: 10px;
 	color: #19283C;
   border: 2px solid #19283C;
 	background: #F6F6F6;
@@ -126,10 +126,9 @@ body {
 .balloon-1-right {
 	position: relative;
 	display: inline-block;
-	padding: 0 15px;
 	min-width: 115px;
-	height: 40px;
-	line-height: 34px;
+	// height: 40px;
+	// line-height: 22px;
 	color: #19283C;
 	background: #F6F6F6;
 	border: 2px solid #19283C;
