--- a/app/views/trainings/answers/new.js.erb
+++ b/app/views/trainings/answers/new.js.erb
@@ -1,1 +1,2 @@
 $('.chat-area').append("<%= escape_javascript(render('trainings/bot', bot: @bot, messages: [@message], message: @message)) %><br />");
+add_events()
