デモ対応可能なオペレーションをflashで表示する

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -59,12 +59,12 @@ body {
   -moz-border-radius: 5px;
 }
 
-.alert-main {
-  position: fixed;
-  top: 50px;
-  width: 100%;
-  z-index: 100;
-}
+// .alert-main {
+//   position: fixed;
+//   top: 50px;
+//   width: 100%;
+//   z-index: 100;
+// }
 
 .list-group-item {
   position: relative;
