--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,18 +1,9 @@
-<% if flash[:notice] %>
-  <div class="alert alert-main alert-dismissible alert-success">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <%= notice %>
-  </div>
-<% end %>
-<% if flash[:error] %>
-  <div class="alert alert-main alert-dismissible alert-danger">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <%= flash[:error] %>
-  </div>
-<% end %>
-<% if flash[:alert] %>
-  <div class="alert alert-main alert-dismissible alert-danger">
-    <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-    <%= alert %>
-  </div>
+<% alert_types = { notice: :success, error: :danger, alert: :danger, warning: :warning } %>
+<% alert_types.each do |flash_type, alert_type| %>
+  <% if flash[flash_type] %>
+    <div class="alert alert-main alert-dismissible alert-<%= alert_type %>">
+      <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+      <%= simple_format flash[flash_type] %>
+    </div>
+  <% end %>
 <% end %>
