api/v1/messages_controllerでfind_or_create_byを使うように修正

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-  <div class="col-sm-4 col-sm-offset-3 col-xs-12 text-center context alert-success"></div>
+  <!-- <div class="col-sm-4 col-sm-offset-3 col-xs-12 text-center context alert-success"></div> -->
   <div class="col-sm-8 col-sm-offset-2 chat-area">
     <% @chat.messages.each do |message| %>
       <% if message.bot? %>
