--- a/app/assets/stylesheets/lumen/variables.less
+++ b/app/assets/stylesheets/lumen/variables.less
@@ -190,7 +190,7 @@
 //** `<input>` border color
 @input-border:                   darken(#f8f8f8, 6.5%);
 
-// TODO: Rename `@input-border-radius` to `@input-border-radius-base` in v4
+// Rename `@input-border-radius` to `@input-border-radius-base` in v4
 //** Default `.form-control` border radius
 // This has no effect on `<select>`s in some browsers, due to the limited stylability of `<select>`s in CSS.
 @input-border-radius:            @border-radius-base;
