--- a/app/views/bots/index.html.erb
+++ b/app/views/bots/index.html.erb
@@ -15,7 +15,7 @@
         <td><%= image_tag bot.image_url(:thumb) %></td>
         <td><%= bot.name %></td>
         <td>
-          <%= link_to 'チャットする', new_bot_chats_path(bot), class: "btn btn-default" %>
+          <%= link_to 'チャットする', new_chats_path(bot.token), class: "btn btn-default" %>
           <%= link_to "Botを育てる", new_bot_training_path(bot), class: 'btn btn-primary' %>
           <%= link_to "学習を実行する", bot_learning_path(bot), method: :patch, class: 'btn btn-danger' %>
           <%= link_to "編集する", edit_bot_path(bot), class: 'btn btn-default' %>
