--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -11,14 +11,14 @@
     <% end %>
   </div>
 
-  <%= bootstrap_form_for @chat.messages.build, url: bot_chats_messages_path, remote: true do |f| %>
+  <%= bootstrap_form_for @chat.messages.build, url: chats_messages_path(@bot.token), remote: true do |f| %>
     <div class="col-sm-8 col-sm-offset-2 col-xs-12 text-center comment-area">
       <div class="input-group">
         <%= f.text_field :body, placeholder: '質問を入れてください', hide_label: true %>
         <%= f.hidden_field :context %>
         <span class="input-group-btn">
           <%= f.submit '質問する', class: 'btn btn-primary question' %>
-          <%= link_to 'クリアする', bot_chats_path, method: :delete, class: 'btn btn-default' %>
+          <%= link_to 'クリアする', chats_path(@bot.token), method: :delete, class: 'btn btn-default' %>
         </span>
       </div>
     </div>
