--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <% unless session[:embed] == '1' && controller.controller_name == 'chats' %>
+  <% unless params[:token].present? %>
     <%= render 'layouts/header' %>
   <% end %>
   <%= render "shared/flash" %>
