対話履歴スレッド一覧にページングを実装

--- a/app/views/threads/index.html.erb
+++ b/app/views/threads/index.html.erb
@@ -31,6 +31,8 @@
   </tbody>
 </table>
 
+<%= paginate @chats %>
+
 <br>
 
 <%#= link_to t('helpers.link.new'), new_message_path, class: "btn btn-default" %>
