bot一覧画面から「一括インポート」ボタンから遷移する導線を作る

--- a/app/views/data_imports/_form.html.erb
+++ b/app/views/data_imports/_form.html.erb
@@ -1,9 +1,9 @@
 <%= bootstrap_form_tag url: bot_imports_path(@bot), method: :post do |f| %>
   <%#= render "shared/errors", object: @bot %>
 
-  <%= f.file_field :file, label: 'ファイル' %>
+  <%= f.file_field :file %>
 
   <div class="actions">
-    <%= f.submit class: 'btn btn-success' %>
+    <%= f.submit class: 'btn btn-primary' %>
   </div>
 <% end %>
