--- a/app/views/bots/index.html.erb
+++ b/app/views/bots/index.html.erb
@@ -18,6 +18,7 @@
           <%= link_to 'チャットする', new_chats_path(bot.token), class: "btn btn-default" %>
           <%= link_to "Botを育てる", new_bot_training_path(bot), class: 'btn btn-primary' %>
           <%= link_to "学習データをエクスポート", bot_exports_path(bot), class: 'btn btn-default' %>
+          <%= link_to "学習データをインポート", new_bot_imports_path(bot), class: 'btn btn-default' %>
           <%= link_to "学習を実行する", bot_learning_path(bot), method: :patch, class: 'btn btn-danger' %>
           <%= link_to "編集する", edit_bot_path(bot), class: 'btn btn-default' %>
           <%= link_to "対話履歴", bot_threads_path(bot), class: 'btn btn-default' %>
