--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -8,11 +8,11 @@
     <div class="col-sm-12 balloon-1-left balloon">
       <% if messages.last == message # && !training_message.id == Answer::START_MESSAGE_ID%>
         <span id="last-message" />
-        <%= bootstrap_form_for [bot, message.training, message.answer || Answer.new], remote: true do |f| %>
+        <%= bootstrap_form_for [bot, message.training, message.answer || Answer.new] do |f| %>
           <%= f.text_area :body, hide_label: true %>
           <%= hidden_field_tag :parent_decision_branch_id, message.try(:answer).try(:parent_decision_branch).try(:id) %>
           <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
-          <%= f.submit class: 'btn btn-primary' %>
+          <%= f.submit class: 'btn btn-success' %>
         <% end %>
         <br />
         <% if message.persisted? %>
