--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -8,21 +8,28 @@
     <div class="col-sm-12 balloon-1-left balloon">
       <% if messages.last == message # && !training_message.id == Answer::START_MESSAGE_ID%>
         <span id="last-message" />
-        <%= bootstrap_form_for [bot, message.training, message.answer || Answer.new] do |f| %>
-          <%= f.text_area :body, hide_label: true %>
+        <% if message.persisted? %>
+          <%= bootstrap_form_for [bot, message.training, message.answer || Answer.new] do |f| %>
+            <%= f.text_area :body, hide_label: true %>
+            <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
+            <%= f.submit class: 'btn btn-success' %>
+          <% end %>
+          <br />
+        <% end %>
+        <%
+          url = if message.persisted?
+                  replace_bot_training_answer_path(bot, message.training, message)
+                else
+                  bot_training_answers_path(bot, message.training)
+                end
+         %>
+        <%= bootstrap_form_for Answer.new, url: url do |f| %>
+          <div class="form-group">
+            <%= f.autocomplete_field :body, autocomplete_answer_body_bot_trainings_path, class: 'form-control' %>
+          </div>
           <%= hidden_field_tag :parent_decision_branch_id, message.try(:answer).try(:parent_decision_branch).try(:id) %>
           <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
-          <%= f.submit class: 'btn btn-success' %>
-        <% end %>
-        <br />
-        <% if message.persisted? %>
-          <%= bootstrap_form_for Answer.new, url: replace_bot_training_answer_path(bot, message.training, message) do |f| %>
-            <div class="form-group">
-              <%= f.autocomplete_field :body, autocomplete_answer_body_bot_trainings_path, class: 'form-control' %>
-            </div>
-            <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
-            <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
-          <% end %>
+          <%= f.submit 'この回答に差し替える', class: 'btn btn-danger' %>
         <% end %>
       <% else %>
         <%= auto_link(simple_format(message.body), html: { target: '_blank' }) %>
