--- a/app/views/trainings/_decision_branch_fields.html.slim
+++ b/app/views/trainings/_decision_branch_fields.html.slim
@@ -1,5 +1,5 @@
 li.nested-fields.list-group-item data-decision-branch-id=decision_branch.id
-  = form_tag new_bot_training_answer_path(bot, training), method: :get, remote: true do |f|
+  = form_tag new_bot_training_answer_path(bot, training), method: :get do |f|
     = hidden_field_tag :decision_branch_id
   = bootstrap_form_for [bot, training, answer, decision_branch], remote: true do |f|
     .decision-branch-value
