--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -16,8 +16,13 @@
                 end
          %>
         <%= bootstrap_form_for message.answer, url: url, method: :post do |f| %>
-          <div class="form-group">
+          <div class="input-group form-group">
             <%= f.autocomplete_field :body, autocomplete_answer_body_bot_trainings_path, class: 'form-control' %>
+            <span class="input-group-btn">
+              <a class="btn btn-default" href="#">
+                <i class="glyphicon glyphicon-list-alt"></i>
+              </a>
+            </span>
           </div>
           <%= hidden_field_tag :parent_decision_branch_id, message.try(:answer).try(:parent_decision_branch).try(:id) %>
           <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
