--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -8,28 +8,32 @@
     <div class="col-sm-12 balloon-1-left balloon">
       <% if messages.last == message # && !training_message.id == Answer::START_MESSAGE_ID%>
         <span id="last-message" />
-        <%
-          url = if message.persisted?
-                  replace_bot_training_answer_path(bot, message.training, message)
-                else
-                  bot_training_answers_path(bot, message.training)
-                end
-         %>
-        <%= bootstrap_form_for message.answer, url: url, method: :post do |f| %>
-          <div class="input-group form-group">
+      <% end %>
+      <%
+        url = if message.persisted?
+                replace_bot_training_answer_path(bot, message.training, message)
+              else
+                bot_training_answers_path(bot, message.training)
+              end
+       %>
+      <%= bootstrap_form_for message.answer, url: url, method: :post do |f| %>
+        <div class="message-body-wrapper">
+          <%= auto_link(simple_format(message.body, class: 'message-body'), html: { target: '_blank' }) %>
+          <a href="javascript:void(0);"><i class="glyphicon glyphicon-pencil"></i></a>
+        </div>
+
+        <div class="message-body-edit hidden">
+          <div class="form-group">
             <%= f.autocomplete_field :body, autocomplete_answer_body_bot_trainings_path, class: 'form-control' %>
-            <span class="input-group-btn">
-              <a class="btn btn-default" href="#">
-                <i class="glyphicon glyphicon-list-alt"></i>
-              </a>
-            </span>
           </div>
           <%= hidden_field_tag :parent_decision_branch_id, message.try(:answer).try(:parent_decision_branch).try(:id) %>
           <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
           <%= f.submit 'この回答に差し替える', class: 'btn btn-success' %>
-        <% end %>
-      <% else %>
-        <%= auto_link(simple_format(message.body), html: { target: '_blank' }) %>
+        </div>
+
+        <div class="pull-right">
+          <i class="glyphicon glyphicon-list-alt"></i>
+        </div>
       <% end %>
     </div>
     <% if message.answer_id.present? && messages.last == message %>
