--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -82,6 +82,7 @@ body {
   -webkit-border-radius: 10px;
   -moz-border-radius: 10px;
   padding: 12px;
+  position: relative;
 }
 
 /* balloon-1 left */
@@ -166,4 +167,9 @@ body {
 }
 .message-body {
   display: inline;
+}
+.btn-message-remove {
+  position: absolute;
+  right: -10px;
+  top: -9px;
 }
