--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -6,6 +6,7 @@
   </div>
   <div class="col-sm-8 col-xs-9">
     <div class="col-sm-12 balloon-1-left balloon">
+      <%= link_to bot_training_training_message_path(bot, message.training, message), method: :delete, class: "btn-message-remove btn btn-default btn-xs" do %><i class="glyphicon glyphicon-remove"></i><% end %>
       <% if messages.last == message # && !training_message.id == Answer::START_MESSAGE_ID%>
         <span id="last-message" />
       <% end %>
