選択肢の文章が長いとボタンから見切れてしまう問題を修正

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -173,3 +173,10 @@ body {
   right: -10px;
   top: -9px;
 }
+.list-group {
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+  a:hover { text-decoration: none;}
+}
