--- a/app/views/trainings/_bot.html.erb
+++ b/app/views/trainings/_bot.html.erb
@@ -27,7 +27,7 @@
 
         <div class="message-body-edit hidden">
           <div class="form-group">
-            <%= f.autocomplete_field :body, autocomplete_answer_body_bot_trainings_path, class: 'form-control' %>
+            <%= f.autocomplete_text_area :body, autocomplete_answer_body_bot_trainings_path, placeholder: "Menu Item Name", class: 'form-control', rows: 4 %>
           </div>
           <%= hidden_field_tag :parent_decision_branch_id, message.try(:answer).try(:parent_decision_branch).try(:id) %>
           <%= hidden_field_tag :auto, params[:auto] || 0, class: 'auto-mode' %>
