--- a/app/views/trainings/_decision_branch_fields.html.slim
+++ b/app/views/trainings/_decision_branch_fields.html.slim
@@ -9,7 +9,7 @@ li.nested-fields.list-group-item data-decision-branch-id=decision_branch.id oncl
         / TODO onclickを使わないようにしたい
         = link_to 'javascript:void(0)', class: 'btn btn-default', onclick: "swtich_to_text_field(this);" do 
           span.glyphicon.glyphicon-pencil aria-hidden="true"
-        = link_to path, remote: true, method: :delete, class: 'btn btn-default', onclick: "destroy_decision_branch_field(this);" do 
+        = link_to path, remote: true, method: :delete, class: 'btn btn-default', onclick: "destroy_decision_branch_field(event);" do 
           span.glyphicon.glyphicon-remove aria-hidden="true"
     - style = decision_branch.body.present? ? 'display:none;' : ''
     .decision-branch-field style=style
