--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>どんうさぎbot - mofmof inc.</title>
+  <title>My-ope - mofmof inc.</title>
   <% assets = Rails.application.assets || ::Sprockets::Railtie.build_environment(Rails.application) %>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <%= stylesheet_link_tag    'lumen', media: 'all' %>
@@ -16,8 +16,36 @@
   <% unless params[:token].present? %>
     <%= render 'layouts/header' %>
   <% end %>
-  <%= render "shared/flash" %>
-  <div class="container container-main">
+  <div id="sidebar-wrapper" class="col-sm-2">
+    <ul class="sidebar-nav list-group">
+      <li class="bot-profile list-group-item text-center">
+        <%= link_to edit_bot_path(@bot) do %>
+          <p><%= @bot.name %></p>
+          <% if @bot.image %>
+            <%= image_tag @bot.image_url(:thumb) %>
+          <% end %>
+        <% end %>
+      </l>
+      <li class="list-group-item">
+        <%= link_to 'チャットする', new_chats_path(@bot.token) %>
+      </li>
+      <li class="list-group-item">
+        <%= link_to "育てる", new_bot_training_path(@bot) %>
+      </li>
+      <li class="list-group-item">
+        <%= link_to "学習データをエクスポート", bot_exports_path(@bot) %>
+      </li>
+      <li class="list-group-item">
+          <%= link_to "学習データをインポート", new_bot_imports_path(@bot) %>
+      </li>
+      <li class="list-group-item">
+        <%= link_to "対話履歴", bot_threads_path(@bot) %>
+      </li>
+    </ul>
+    <%= link_to "学習を実行する", bot_learning_path(@bot), method: :patch, class: 'btn btn-danger btn-block' %>
+  </div>
+  <div class="container container-main col-sm-10 col-sm-offset-2">
+    <%= render "shared/flash" %>
     <%= yield %>
   </div>
 </body>
