スマホでのレイアウト調整

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -190,4 +190,8 @@ body {
     .bot-profile {
       padding: 20px 0;
     }
+    // スマートフォンのみ
+    @media (max-width: 767px) {
+      position: inherit;
+    }
 }
